<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatarImg_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/ivContentDesc"
        app:layout_constraintBottom_toTopOf="@+id/tvMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/tvApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bSignUp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tvMain"
        app:layout_constraintStart_toStartOf="@+id/tvMain"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bSignIn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/bSignUp"
        app:layout_constraintStart_toStartOf="@+id/bSignUp"
        app:layout_constraintTop_toBottomOf="@+id/bSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>